Feat - commit for entities Transaction

--- a/reclamation/src/main/resources/messages.properties
+++ b/reclamation/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
 agence.add.msg.succes= Agence {0} bien ajoutée.
+transaction.add.msg.succes= Transaction {0} bien ajoutée.
+transaction.update.msg.succes= Transaction {0} modified.
