feat-commit for adding Client services !

--- a/reclamation/src/main/resources/messages.properties
+++ b/reclamation/src/main/resources/messages.properties
@@ -1,3 +1,4 @@
 agence.add.msg.succes= Agence {0} bien ajoutée.
+client.add.msg.succes= Client {0} bien ajouté.
 transaction.add.msg.succes= Transaction {0} bien ajoutée.
 transaction.update.msg.succes= Transaction {0} modified.
